<resources>
    <string name="app_name">ConversorMoedas</string>
    <string name="qual_o_valor_em_real">Qual o valor em Real ?</string>
    <string name="valor_em_dolar">Valor em Dólar:</string>
    <string name="valor_em_euro">Valor em Euro:</string>
    <string name="calculate">Calculate</string>
    <string name="euro">Euro</string>
    <string name="dolar">Dólar</string>
    <string name="informe_valor">Informe um Valor !</string>
</resources>
